portfolio/styles.css
:root{
	/* colors */
	--light-coral: #FF7477;
	--pastel-pink: #E69597;
	--silver-pink: #CEB5B7;
	--powder-blue: #B5D6D6;
	--celeste: #9CF6F6;
	--olive: #3D9970;
	--text-black: #1F1F1F;

	background-color: white;
	font-family: "Noto Sans", sans-serif;
	color: var(--text-black);
	line-height: 2;
}
/* DESKTOPS AND LAPTOPS */
a{
	text-decoration: none;
	color: var(--text-black);
}
.body{
}
.main{
}
#main-container{
	display: flex;
	flex-direction: row;
	justify-content: space-evenly;
	height: 90vh;
	margin: auto;
	max-width: 90vw;
	max-height: 90vh;
}
#about-container{
	width: 300px;
	max-height: 800px;
	height: auto;
	background-color: white;
	border: solid var(--text-black) 2px;
	border-radius: 10px;
}
#about-container:hover{
	background-color: var(--powder-blue);
	transition: 0.3s;
}
#default-container{
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	align-items: center;
	height: 100%;
}
#text-container{
	padding: 5px;
}
#name{
	margin: 0% 0% 0% 5%;
}
#contact-container{
	display: flex;
	flex-direction: row;
	justify-content: space-around;
	align-items: center;
	height: 100px;
	width: 100%;
}
.avatar{
	margin: 10px;
	width: 50%;
	max-width: 200px;
	border-radius: 500px;
	border: solid var(--text-black) 2px;
	background-color: white;
}
.contact-icon{
	width: 50px;
	height: 50px;
}
.card {
  /* Add shadows to create the "card" effect */
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  transition: 0.3s;
}

/* On mouse-over, add a deeper shadow */
.card:hover {
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}
/**{border: dashed 1px black;}*/
.ab{border: dashed 1px black;}
#showcase-container{
	height: 100%;
	max-height: 800px;
	width: 800px;
	display: flex;
	flex-direction: column;
	justify-content: flex-start;
	align-items: stretch;
	border: solid var(--text-black) 2px;
	border-radius: 10px;
}
#showcase-container:hover{
	background-color: var(--powder-blue);
	transition: 0.3s;
}
#showcase-items{
	display: flex;
	flex-direction: row;
	justify-content: space-evenly;
	margin: 0px 15px 15px 15px;
	flex: 1;
}

#projects-title{
	margin: 15px 15px 15px 15px;
}
.showcase-card{
	width: 300px;
	height: stretch;
	margin: 15px 15px 15px 15px;
	background-color: white;
	padding: 20px 20px 20px 20px;
	border-radius: 10px;
}
.showcase-card:hover{
	border: solid var(--silver-pink) 5px;
	transform: scale(1.1);
	transition: 0.1s;
}
.showcase-img{
	max-width: 100%;
}
/* MOBILES and TABLETS */
@media (max-width: 850px){
	#main-container{
		display: flex;
		flex-direction: column;
		justify-content: flex-start;
		height: auto;
		margin: auto;
	}
	#about-container{
		width: 100%;
		height: auto;
		background-color: white;
		border: solid var(--text-black) 2px;
		border-radius: 10px;
		flex: 1;
	}
	#showcase-container{
		height: auto;
		width: auto;
		border: solid var(--text-black) 2px;
		border-radius: 10px;
		margin: 10px;
		flex: 1;
	}
	#showcase-items{
		display: flex;
		flex-direction: column;
	/*	justify-content: space-evenly;
		margin: 0px 15px 15px 15px;
		flex: 1;
		*/
	}
	.showcase-card{
		width: auto;
		height: auto;
		margin: 5px 5px 5px 5px;
		background-color: white;
		padding: 20px 20px 20px 20px;
	}
}

